--- a/styles/default.css
+++ b/styles/default.css
@@ -1,1 +1,24 @@
-.dark
+h1, h2, h3 {
+    font-family: 'Satisfy', cursive;
+    color: #FFFFFF;
+}
+
+body {
+    font-family: 'Patrick Hand', sans-serif;
+    color: #FFFFFF;
+    background-color: #333333;
+    font-size: 17pt;
+}
+
+h1 {
+    text-align: center;
+    font-size: 28pt;
+}
+
+h2 {
+    font-size: 24pt;
+}
+
+h3 {
+    font-size: 20pt;
+}
