I lied, fonts and viewport RWD

--- a/styles/default.css
+++ b/styles/default.css
@@ -8,6 +8,7 @@ body {
     color: #FFFFFF;
     background-color: #333333;
     font-size: 17pt;
+    text-align: center;
 }
 
 h1 {
@@ -21,4 +22,34 @@ h2 {
 
 h3 {
     font-size: 20pt;
+}
+
+main {
+    width: 55%;
+    margin: auto;
+}
+
+nav {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.navlink {
+    margin: 0% 5% 0% 5%;
+}
+
+@media only screen and (max-width: 700px) {
+    main {
+        width: 95%;
+        margin: auto;
+    }
+    
+    .navlink {
+        margin: 0% 0% 0% 0%;
+    }
 }
