--- a/styles/default.css
+++ b/styles/default.css
@@ -61,6 +61,10 @@ a.btn {
     margin: 30px 10px 10px 10px;
 }
 
+.btn:hover {
+    background-color:#6b5e9b55;
+}
+
 .step {
     width: 80%;
     padding: 10px 10px;
@@ -78,9 +82,7 @@ svg.stepsvg {
     display: none;
 }
 
-#guidelines {
-    margin-bottom: 50px;
-}
+
 
 /* For small screens */
 @media only screen and (max-width: 700px) {
