Font cleanup and new game jam game

--- a/gallery.njk
+++ b/gallery.njk
@@ -16,3 +16,4 @@ title: Illustrations
                 {% endif %}
             {%- endfor %}
         </section>
+        <script type="module" src="/static/scripts/gallery.mjs"></script>
