--- a/static/styles/default.css
+++ b/static/styles/default.css
@@ -1,21 +1,5 @@
 /* Fonts */
-@font-face {
-    font-family: 'Porcelain';
-    src: url('../fonts/porcelain-webfont.woff2') format('woff2'),
-        url('../fonts/porcelain-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'Newt Serif';
-    src: url('../fonts/newtserif-webfont.woff2') format('woff2'),
-        url('../fonts/newtserif-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
+@import url('../fonts/stylesheet.css');
 
 /* Colours */
 :root {
@@ -29,7 +13,8 @@
 html {
     color: var(--baby-powder);
     background-color: var(--raisin-black);
-    font-family: 'Newt Serif', serif;
+    /* font-family: 'Newt Serif', serif; */
+    font-family: 'SciFly Sans', sans-serif;
 }
 
 
