--- a/gallery.njk
+++ b/gallery.njk
@@ -3,6 +3,7 @@ layout: base.njk
 title: Illustrations
 ---
 
+{# THERE SHOULD BE A LINK TO PHOTOSWIPE STYLESHEET SOMEWHERE! #}
 <section class="pswp-gallery" id="artgallery">
     {% for image in images %}
         {% if image.url | length %}
@@ -16,4 +17,6 @@ title: Illustrations
                 {% endif %}
             {%- endfor %}
         </section>
-        <script type="module" src="/static/scripts/gallery.mjs"></script>
+        <script type="text/javascript" src="/static/scripts/umd/photoswipe.umd.min.js"></script>
+        <script type="text/javascript" src="/static/scripts/umd/photoswipe-lightbox.umd.min.js"></script>
+        <script type="text/javascript" src="/static/scripts/gallery.cjs"></script>
