Pathprefix fix for GH Pages

--- a/gallery.njk
+++ b/gallery.njk
@@ -6,16 +6,16 @@ title: Illustrations
 <section class="pswp-gallery" id="artgallery">
     {% for image in images %}
         {% if image.url | length %}
-            <a href="{{ image.url }}" data-pswp-width="{{ image.width }}" data-pswp-height="{{ image.height }}" target="_blank" class="gallery-img">
+            <a href="{{ image.url | url }}" data-pswp-width="{{ image.width }}" data-pswp-height="{{ image.height }}" target="_blank" class="gallery-img">
                 <picture>
                     {% if image.thumbAvif %}
-                        <source type="image/avif" srcset="{{ image.thumbAvif }}">
+                        <source type="image/avif" srcset="{{ image.thumbAvif | url }}">
                         {% endif %}
-                        <img loading="lazy" alt="{{ image.alt }}" src="{{ image.thumb }}" width="300px" height="300px"></picture>
+                        <img loading="lazy" alt="{{ image.alt }}" src="{{ image.thumb | url }}" width="300px" height="300px"></picture>
                     </a>
                 {% endif %}
             {%- endfor %}
         </section>
-        <script type="text/javascript" src="/static/scripts/umd/photoswipe.umd.min.js"></script>
-        <script type="text/javascript" src="/static/scripts/umd/photoswipe-lightbox.umd.min.js"></script>
-        <script type="text/javascript" src="/static/scripts/gallery.cjs"></script>
+        <script type="text/javascript" src="{{ '/static/scripts/umd/photoswipe.umd.min.js' | url }}"></script>
+        <script type="text/javascript" src="{{ '/static/scripts/umd/photoswipe-lightbox.umd.min.js' | url }}"></script>
+        <script type="text/javascript" src="{{ '/static/scripts/gallery.cjs' | url }}"></script>
