--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -4,12 +4,11 @@
         <!-- Title -->
         <title>Camber's {{ title | safe }}</title>
         <link
-        rel="icon" type="image/png" href="/static/imgs/pfp-ico.png"> <!-- Display information -->
+        rel="icon" type="image/png" href="{{ '/static/imgs/pfp-ico.png' | url }}"> <!-- Display information -->
         <meta charset="UTF-8">
         <meta
         name="viewport" content="width=device-width, initial-scale=1"> <!-- Stylesheets -->
-        <link
-        rel="stylesheet" href="/static/styles/default.css">
+        <link rel="stylesheet" href="{{ '/static/styles/default.css' | url }}"> {% block additional_styles %}{% endblock %}
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/c938d70fe8.js" crossorigin="anonymous"></script>
     </head>
@@ -17,10 +16,10 @@
         <header>
             <h1>Camber's Creations</h1>
             <nav>
-                <a href="/">Home</a>
-                <a href="/gallery/">Illustration</a>
-                <a href="/web/">Websites</a>
-                <a href="/game-development/">Games</a>
+                <a href="{{ '/' | url }}">Home</a>
+                <a href="{{ '/gallery/' | url }}">Illustration</a>
+                <a href="{{ '/web/' | url }}">Websites</a>
+                <a href="{{ '/game-development/' | url }}">Games</a>
             </nav>
         </header>
         <main>
